statum-macros/tests/ui/invalid_transition_unknown_secondary_return_state.stderr
error: Error: transition target `Ghost` is not a variant of the machine's linked `#[state]` family.
  --> tests/ui/invalid_transition_unknown_secondary_return_state.rs:13:1
   |
13 | #[state]
   | ^^^^^^^^
...
22 | #[transition]
   | ------------- in this attribute macro expansion
   |
   = note: this error originates in the macro `__statum_resolve_state_target` which comes from the expansion of the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find type `Ghost` in this scope
  --> tests/ui/invalid_transition_unknown_secondary_return_state.rs:24:74
   |
24 |     fn to_b_or_ghost(self) -> ::core::result::Result<Machine<B>, Machine<Ghost>> {
   |                                                                          ^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
23 | impl<Ghost> Machine<A> {
   |     +++++++

error[E0425]: cannot find type `Ghost` in this scope
  --> tests/ui/invalid_transition_unknown_secondary_return_state.rs:36:34
   |
36 |     fn to_ghost(self) -> Machine<Ghost> {
   |                                  ^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
23 | impl<Ghost> Machine<A> {
   |     +++++++

error[E0599]: no variant or associated item named `Ghost` found for enum `StateId` in the current scope
  --> tests/ui/invalid_transition_unknown_secondary_return_state.rs:22:1
   |
19 | #[machine]
   | ---------- variant or associated item `Ghost` not found for this enum
...
22 | #[transition]
   | ^^^^^^^^^^^^^ variant or associated item not found in `StateId`
   |
   = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)
